apps/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: nori-cloud
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
