apps/postgres/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: nori-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - image: postgres:16-alpine
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: nori-cloud
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: nori-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - image: dpage/pgadmin4:latest
          name: pgadmin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: nori-cloud
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: pgadmin
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: nori-cloud
  labels:
    app: pgadmin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pgadmin.norriswu.me`)
      kind: Rule
      services:
        - name: pgadmin
          port: 80
